<resources>
    <string name="app_name">Language Learning App</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="reset">Reset</string>
    <string name="changeLesson">Change Lesson</string>
</resources>